# prao-fourier

./: CMakeLists.txt  README.md  config.json  main.cpp
Calibration/: CalibrationData.cpp  CalibrationData.h  CalibrationDataInput.cpp  CalibrationDataInput.h  CalibrationDataStorage.cpp  CalibrationDataStorage.h
Celestial/: Ray.cpp  Ray.h  Timestamp.cpp  Timestamp.h
Config/: Config.cpp  Config.h
Context/: OpenCLContext.cpp  OpenCLContext.h
Data/: DataHeader.cpp  DataHeader.h  FileHandler.cpp  FileHandler.h
FileHandler/: FileHandler.cpp  FileHandler.h
FourierHandler/: FourierHandler.cpp  FourierHandler.h  FourierTransformer.cpp  FourierTransformer.h  Processor.cpp  Processor.h
Point/: Point.h
Reader/: DataHeader.cpp  DataHeader.h  DataReader.cpp  DataReader.h  DataSeeker.cpp  DataSeeker.h  FilesListItem.cpp  FilesListItem.h
Summarizing/: SummarizeHandler.cpp  SummarizeHandler.h
Time/: TimeCoordinate.cpp  TimeCoordinate.h  TimeCoordinateHandler.cpp  TimeCoordinateHandler.h  TimeUtils.cpp  TimeUtils.h
Writing/: WriteHandler.cpp  WriteHandler.h
plot/: app.py  file_reader.py
